--- a/Главная.css
+++ b/Главная.css
@@ -1,3 +1,16 @@
+.border {
+border: 6px solid;
+border-color: #00B9FB;
+padding: 0px;
+margin: 0px;
+background-color: #46335F;
+}
+.bordersmall {
+  border: 6px solid #00B9FB;
+  padding: 20px;
+  margin: 0px;
+  background-color: #46335F;
+  }
 .u-section-1 {
   background-image: url("images/fon1-min.gif");
   background-position: 50% 50%;
