--- a/dz.css
+++ b/dz.css
@@ -1,9 +1,11 @@
+
 .border {
   border: 6px solid;
   border-color: #00B9FB;
   padding: 0px;
   margin: 0px;
   background-color: #46335F;
+  background-width: 90%;
   }
 
 .u-section-1 {
