--- a/Главная.css
+++ b/Главная.css
@@ -5,13 +5,13 @@ border-color: #00B9FB;
 padding: 0px;
 margin: 0px;
 background-color: #46335F;
+height: 390px;
 }
 .neved {
  color: rgba(8, 136, 255, 0.4);
   }
 .u-section-1 {
-  background-image: url("images/fon1-min.gif");
-  background-position: 50% 50%;
+
 }
 
 .u-section-1 .u-sheet-1 {
